fix findDiff issue, add new vehicle by day report, update open api specification
