# server/api/controllers/report.controller.js
@@ -5,6 +5,11 @@ class ReportController {
     const report = await ReportService.inspectioAndChassis();
     res.send(report);
   }
+
+  async getNewVehicleCount(req, res) {
+    const report = await ReportService.getNewVehicleCountFrom(req.params.days);
+    res.send(report);
+  }
 }
 
 export default new ReportController();
